--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
+    "nodemon": "^2.0.21",
     "openai": "^3.1.0"
   }
 }
